# ArUco-COLMAP-point-cloud-scaling

./: CMakeLists.txt  README.md  distancePointsByID.py  main.cpp  notes.txt
findImageCoords/: ArUcoDetector.cpp  ArUcoDetector.hpp
findLength/: findLength.cpp  findLength.hpp
scalePointcloud/: scalePointcloud.cpp  scalePointcloud.hpp
